--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/Bdragon93/universal-tutorial#readme",
   "dependencies": {
     "autoprefixer": "^6.5.1",
+    "axios": "^0.15.2",
     "babel-cli": "^6.16.0",
     "babel-loader": "^6.2.5",
     "babel-preset-latest": "^6.16.0",
@@ -41,14 +42,18 @@
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "http-proxy": "^1.15.1",
+    "immutable": "^3.8.1",
+    "node-sass": "^3.10.1",
     "postcss-loader": "^1.1.0",
     "pretty-error": "^2.0.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-hot-loader": "1.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
+    "sass-loader": "^4.0.2",
     "serialize-javascript": "^1.3.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
