--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,12 @@
     "stage-0",
     "react",
     "es2015"
+  ],
+  "plugins": [
+    "syntax-async-functions",
+    "transform-class-properties",
+    "transform-decorators",
+    "transform-object-rest-spread",
+    "transform-regenerator",
   ]
 }
