--- a/package.json
+++ b/package.json
@@ -61,6 +61,11 @@
     "webpack-isomorphic-tools": "^2.6.3"
   },
   "devDependencies": {
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.18.0",
+    "babel-plugin-transform-decorators": "^6.13.0",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-plugin-transform-regenerator": "^6.16.1",
     "concurrently": "^3.1.0",
     "nodemon": "^1.11.0",
     "redux-devtools": "^3.3.1",
